Updated href link to index.php

--- a/pages/map.html
+++ b/pages/map.html
@@ -57,7 +57,7 @@
                         <img src="../img/TimeToCareLogo.png" alt="logo" style="width:60px; padding-top: 3px; padding-right: 4px;"/>
                     </div>
                     <div style="float: left">
-                        <a class="navbar-brand topnav" id="logoTitle" href="../index.html#">TimeToCare</a>
+                        <a class="navbar-brand topnav" id="logoTitle" href="../index.php#">TimeToCare</a>
                     </div>
                     <div style="clear:both;"></div>
                 </div>
