Added icon functionality

--- a/pages/map.html
+++ b/pages/map.html
@@ -211,6 +211,7 @@
                     map: map,
 //                    label: labels[labelIndex++ % labels.length],
                     position: results[0].geometry.location,
+                      icon: icon
                     
                   }));
                 } else {
