--- a/pages/map.html
+++ b/pages/map.html
@@ -66,10 +66,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="../index.html#services">Services</a>
+                        <a href="../index.php#services">Services</a>
                     </li>
                     <li>
-                        <a href="../index.html#contact">Contact</a>
+                        <a href="../index.php#contact">Contact</a>
                     </li>
                     <li>
                         <div style="margin-right: 55px"></div>
